--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -73,3 +73,17 @@ nav a:hover {
     border: 4px solid black;
     padding: 20px;
 }
+
+.tableau {
+    text-align: center;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.code {
+    border-radius: 5px;
+    border: 4px solid black;
+    padding: 20px 80px;
+}
