--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -87,3 +87,12 @@ nav a:hover {
     border: 4px solid black;
     padding: 20px 80px;
 }
+
+.movies-list {
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+.container {
+    text-align: center;
+}
